# hildegard-neumes

./: .gitignore  .markdownlint-cli2.yaml  FONTLOG.txt  OFL.txt  README.md  glyph_inventory_v0.5.md  glyph_priority_sheet.md  hildegard_metadata.json  justfile  lychee.toml  pyproject.toml  research_synthesis.md  research_v2_findings.md  rhena_integration_plan.md  smufl_codepoint_mapping.md
.github/workflows/: build-font.yml  codegen.yml  lint-docs.yml  reproducibility.yml  smoke-rhena.yml  validate-contract.yml
docs/: paleographic_drawing_briefs.md
docs/adr/: ADR-0001-source-format.md  ADR-0002-codegen-toolchain.md  ADR-0003-contract-ownership.md  ADR-0004-determinism.md  ADR-0005-width-freeze-scope.md  ADR-0006-license.md  ADR-0007-otf-cff-outlines.md  ADR-0008-paleographic-fidelity-policy.md  ADR-0009-smufl-alignment.md  README.md
docs/archive/: glyph_inventory.md  glyph_priority_sheet_v0.5.md  mei_encoding_reference.md  verovio_integration_plan.md
docs/planning/: claude-review-2-2026-04-14.md  claude-review-2026-04-14.md  claude-review-3-2026-04-14.md  response-to-claude-review-2026-04-14.md  width-review-2026-04-14.md
docs/rhena-coordination/: ADR-0009-generated-rhineland-glyphs.md  README.md  rhineland.contract.json
scripts/: build-font.py  build-font.sh  generate-rhena-glyphs.py  scaffold-ufo.py  validate-font.py
src/: glyph-names.json  widths.json
tests/: _gen_import.py  conftest.py  test_contract_validation.py  test_determinism.py  test_golden_output.py  test_path_normalization.py  test_rhena_smoke.py  test_scaffold.py  test_width_assertion.py
(+33 files in other folders)
